# vector-db-benchmark

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DOCKER_README.md  DOCKER_SETUP.md  Dockerfile  Makefile  README.md  analyze_k_impact.py  analyze_k_summary.py  analyze_shard_k_ratio.py  create-cohere.py  create-gist-960-int8.py  create-int8.py  db.py  db_to_port_and_host  db_to_port_and_host.md  docker-build.sh  docker-compose.yml  docker-run.sh  docker-test.sh  extract_benchmark_table.py  extract_table_data.py  generate_baseline.py  generate_performance_table.py  pyproject.toml  requirements.txt  run.py  run_laion_1b_upload.sh  test_multiprocessing.py  vectorsets.sh
.github/workflows/: ci.yml  docker-build-pr.yml  docker-publish-master.yml  docker-publish-release.yml  fuzz.yml  publish-pypi.yml  test-basic-functionality-redis-vector-sets-rs.yml  test-basic-functionality-redis-vector-sets.yml  test-basic-functionality-redisearch-rs.yml  test-basic-functionality-redisearch.yml  test-basic-functionality.yml  test-build-packages.yml  validate-datasets.yml
.specsmd/: manifest.yaml
benchmark/: dataset.py
dataset_reader/: ann_compound_reader.py  ann_h5_multi_reader.py  ann_h5_reader.py  base_reader.py  json_reader.py  verify.py
datasets/: __init__.py  datasets.json
docs/: MIXED_WORKLOAD_IMPLEMENTATION_PLAN.md
engine/base_client/: client.py  configure.py  search.py  upload.py
engine/clients/: client_factory.py
experiments/: __init__.py
experiments/configurations/: __init__.py  azure-ai-search.json  cohere-calibration.json  create-azureai.py  create-intel-ce-edition.py  create-intel.py  create-ivf.py  create-redis-same-azureai.py  create-redis-vector-types.py  create-svs.py  create-vectorsets.py  databricks-mosaic.json  dbpedia-calibration-IP.json  dbpedia-calibration-L2.json  dbpedia-calibration-float64.json  dbpedia-calibration-mixed.json  dbpedia-calibration.json  dragonfly-single-node.json  milvus-on-disk.json  milvus-single-node.json  mongodb-single-node.json  pgvector-single-node.json  qdrant-hybrid.json  qdrant-single-node-pq-rps.json  qdrant-single-node-single-segment.json  qdrant-single-node.json  redis-docker-test.json  redis-hnsw-single-node.json  redis-intel-hnsw-single-node.json  redis-ivf_flat-single-node.json  redis-ivf_pq-single-node.json  redis-large-scale.json  redis-raft_ivf_flat-single-node.json  redis-raft_ivf_pq-single-node.json  redis-rs-single-node.json  redis-single-node.json  redis-vector-types.json  redis-vs-azure-ai-search.json  turbopuffer-default.json  valkey-docker-test.json  (+8 more)
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/corpus/compound_data/: valid
fuzz/corpus/compound_payloads/: valid.jsonl
fuzz/corpus/compound_queries/: valid_tests
fuzz/corpus/datetime/: valid_rfc3339
fuzz/corpus/ft_search/: valid_resp2_hit
fuzz/corpus/jsonl_reader/: valid.jsonl
fuzz/corpus/metadata/: valid.json
fuzz/corpus/npy_roundtrip/: valid
fuzz/corpus/parse_info/: valid_info
fuzz/corpus/sparse_reader/: valid_2rows.csr
fuzz/corpus/sparse_roundtrip/: valid
fuzz/dictionaries/: csr.dict  datetime.dict  info.dict  json.dict  npy.dict  resp.dict
fuzz/fuzz_targets/: compound_data.rs  compound_payloads.rs  compound_queries.rs  datetime.rs  ft_search.rs  jsonl_reader.rs  metadata.rs  npy_reader.rs  npy_roundtrip.rs  parse_info.rs  sparse_reader.rs  sparse_roundtrip.rs
memory-bank/: maintenance-log.md  project.yaml  story-index.md
memory-bank/standards/: coding-standards.md  tech-stack.md
monitoring/: gpu_wrapper.py
proto/: README.md
rust/: Cargo.toml  pyproject.toml
rust/src/: config.rs  lib.rs  redis_client.rs
scripts/: process-benchmarks.ipynb  update_datasets.py  v0_check.sh
src/: config.rs  lib.rs  metrics.rs  parsers.rs  synthetic.rs
src/readers/: compound_reader.rs  hdf5_reader.rs  jsonl_reader.rs  metadata.rs  mod.rs  npy_reader.rs  sparse_reader.rs
src/redisearch/: configure.rs  mod.rs  parser.rs  search.rs  upload.rs
src/vectorsets/: configure.rs  search.rs  upload.rs
tests/: docker-compose.ci-test.yml  docker-compose.docker-test.yml  docker-compose.test.yml  integration_chroma.rs  integration_cli.rs  integration_dragonfly.rs  integration_elasticsearch.rs  integration_milvus.rs  integration_mongodb.rs  integration_opensearch.rs  integration_pgvector.rs  integration_qdrant.rs  integration_redis.rs  integration_valkey.rs  integration_vectorsets.rs  integration_vertex.rs  integration_weaviate.rs  overhead_invariants.rs
tests/common/: mod.rs
v0/: .dockerignore  DOCKER_README.md  DOCKER_SETUP.md  Dockerfile  README.md  chart.py  docker-build.sh  docker-run.sh  docker-test.sh  test_multiprocessing.py
v0/dataset_reader/: ann_h5_multi_reader.py  ann_h5_reader.py  base_reader.py  splitter.py
v0/datasets/: datasets.json
v0/docs/: dataset-validation.md
v0/results/: redis-m-16-ef-128-h-and-m-2048-angular-filters-search-4-292702-2026-02-26-16-33-03.json  redis-m-16-ef-128-h-and-m-2048-angular-filters-search-4-294125-2026-02-26-16-35-25.json  redis-m-16-ef-128-h-and-m-2048-angular-filters-search-5-292702-2026-02-26-16-33-30.json  redis-m-16-ef-128-h-and-m-2048-angular-filters-search-5-294125-2026-02-26-16-35-57.json  redis-m-16-ef-128-h-and-m-2048-angular-filters-search-6-292702-2026-02-26-16-34-03.json  redis-m-16-ef-128-h-and-m-2048-angular-filters-search-6-294125-2026-02-26-16-36-24.json  redis-m-16-ef-128-h-and-m-2048-angular-filters-search-7-292702-2026-02-26-16-34-44.json  redis-m-16-ef-128-h-and-m-2048-angular-filters-search-7-294125-2026-02-26-16-36-44.json  redis-m-16-ef-128-h-and-m-2048-angular-filters-summary.json  redis-m-16-ef-128-h-and-m-2048-angular-filters-upload-0--1-2026-02-26-14-09-02.json  redis-m-16-ef-128-h-and-m-2048-angular-filters-upload-0--1-2026-02-26-14-36-37.json  redis-m-16-ef-128-h-and-m-2048-angular-filters-upload-0--1-2026-02-26-15-23-28.json  redis-m-16-ef-128-h-and-m-2048-angular-filters-upload-0--1-2026-02-26-16-04-03.json  redis-m-16-ef-128-h-and-m-2048-angular-filters-upload-0--1-2026-02-26-16-19-09.json  redis-test-random-100-summary.json  (+5 more)
(+165 files in other folders)
