[package]
name = "vector_db_benchmark"
version = "0.1.0"
edition = "2021"

[lib]
name = "vector_db_benchmark"
crate-type = ["lib"]

[dependencies]
redis = { version = "1", features = ["cluster"] }
rayon = "1.10"
half = "2.4"
indicatif = "0.18.4"
hdf5 = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
ndarray = "0.16"
ndarray-npy = "0.9"
clap = { version = "4.5", features = ["derive", "env"] }
glob = "0.3"
chrono = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
flate2 = "1"
tar = "0.4"
uuid = "1"
bzip2 = "0.5"
postgres = "0.19"
pgvector = { version = "0.4", features = ["postgres"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "time"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
qdrant-client = "1.17"
elasticsearch = "8.15.0-alpha.1"
opensearch = "2.3.0"
mongodb = { version = "3", features = ["sync"] }
turbopuffer-client = "0.0.4"
rand = "0.8"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "bench_jsonl"
path = "src/bin/bench_jsonl.rs"

[[bin]]
name = "bench_npy"
path = "src/bin/bench_npy.rs"

[[bin]]
name = "vector-db-benchmark"
path = "src/bin/vector_db_benchmark/main.rs"

[[bin]]
name = "generate-dataset"
path = "src/bin/generate_dataset.rs"
