[project]
name = "vector-benchmark"
version = "0.1.0"
description = "Benchmark suite for vector databases with Redis support. Forked from the original vector-db-benchmark project."
readme = "README.md"
license = "LICENSE"
requires-python = ">=3.9,<3.14"
authors = [
    { name = "Redis Performance Team", email = "performance@redis.com" },
]
keywords = ["vector", "database", "benchmark", "redis", "similarity-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Database",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
]
dependencies = [
    "qdrant-client>=1.8.0",
    "typer>=0.19.0",
    "jsons>=1.6.3",
    "h5py>=3.7.0",
    "weaviate-client>=4.5.0",
    "elasticsearch>=8.10.0",
    "pymilvus>=2.3.1",
    "redis>=6.4.0",
    "ipdb>=0.13.9",
    "stopit>=1.1.2",
    "opensearch-py>=2.3.2",
    "tqdm>=4.66.1",
    "backoff>=2.2.1",
    "psycopg[binary]>=3.1.17",
    "pgvector>=0.2.4",
    "ml-dtypes>=0.4.0",
    "boto3>=1.39.4",
]

[project.urls]
Homepage = "https://github.com/redislabs/vector-db-benchmark"
Repository = "https://github.com/redislabs/vector-db-benchmark"

[project.scripts]
vector-db-benchmark = "run:app"

[project.optional-dependencies]
dev = ["pre-commit>=2.20.0", "pytest>=7.1"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "rust/Cargo.toml"
features = ["pyo3/extension-module"]
python-packages = ["benchmark", "dataset_reader", "engine"]
include = [
    "run.py",
    "datasets/__init__.py",
    "datasets/datasets.json",
    "datasets/random-100/**/*",
    "experiments/__init__.py",
    "experiments/configurations/**/*",
]
module-name = "vector_db_benchmark_rs"

# Keep poetry section for dev workflow (poetry install --no-root for deps)
[tool.poetry]
name = "vector-benchmark"
version = "0.1.0"
description = "Benchmark suite for vector databases with Redis support."
authors = ["Redis Performance Team <performance@redis.com>"]
packages = [
    { include = "benchmark" },
    { include = "dataset_reader" },
    { include = "engine" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
qdrant-client = "^1.8.0"
typer = "^0.19.0"
jsons = "^1.6.3"
h5py = "^3.7.0"
weaviate-client = "^4.5.0"
elasticsearch = "^8.10.0"
pymilvus = "^2.3.1"
redis = "^6.4.0"
ipdb = "^0.13.9"
stopit = "^1.1.2"
opensearch-py = "^2.3.2"
tqdm = "^4.66.1"
backoff = "^2.2.1"
psycopg = {extras = ["binary"], version = "^3.1.17"}
pgvector = "^0.2.4"
ml-dtypes = "^0.4.0"
boto3 = "^1.39.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pytest = "^7.1"

[tool.poetry.scripts]
vector-db-benchmark = "run:app"
